[package]
name = "nesir"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
dyn-clone = "1"
proc-bitfield = "0.5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

minifb = "0.28"

[dev-dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
simd-json = "0.15"
camino = "1.1"

[profile.release]
#lto = true
#debug = true

[profile.dev]
overflow-checks = false

[features]
default = []
sst = []